[IMAPx] Fails to append message to Yahoo! with no CRLF at the end
Error while Moving messages to “folder://1234567890abcdef1234567890abcdef12345678/Sent”.
Error appending message: Additional arguments found after last expected argument
Evolution seems to have the same issue as mailkit solved few years ago.
https://github.com/jstedfast/MailKit/issues/251
The issue occurs frequently for all my yahoo accounts, but I am not aware of any other provider having this problem. The error message above appears when trying to move a message from local "Sent" folder to remote "Sent" folder manually.
By default evolution asks "loose formatting" to answer as plaintext and the quoted text ends without a newline in the end. After mail was successfully delivered, the client tries so move the mail to remote "Sent" folder, which fails after several attempts. Then the client stores the mail locally.
A minimal workaround would be to append a newline on every outgoing mail. But this would not solve the issues on moving old messages.
Hope you'll find a way to fix this. Regards