I#13 - [IMAPx] Fails to append message to Yahoo! with no CRLF at the end

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/13