src/camel/camel-stream-null.h
@@ -68,6 +68,8 @@ GType camel_stream_null_get_type (void);
 CamelStream *	camel_stream_null_new		(void);
 gsize		camel_stream_null_get_bytes_written
 						(CamelStreamNull *stream_null);
+gboolean	camel_stream_null_get_ends_with_crlf
+						(CamelStreamNull *stream_null);
 
 G_END_DECLS
 
